--- a/build.gradle
+++ b/build.gradle
@@ -22,19 +22,29 @@ dependencies {
     compile group: 'javax.xml.ws', name: 'jaxws-api', version: '2.1'
     compile group: 'org.mortbay.jetty', name: 'jetty', version: '6.1.5'
     compile group: 'org.mortbay.jetty', name: 'jetty-util', version: '6.1.5'
-    compile group: 'org.apache.ws.commons.neethi', name: 'neethi', version: '2.0'
+    compile group: 'org.apache.neethi', name: 'neethi', version: '2.0'
     compile group: 'javax.xml.soap', name: 'saaj-api', version: '1.3'
     compile group: 'javax.xml.soap', name: 'saaj-impl', version: '1.3'
     compile group: 'stax', name: 'stax-api', version: '1.0.1'
     compile group: 'wsdl4j', name: 'wsdl4j', version: '1.6.1'
     compile group: 'org.codehaus.woodstox', name: 'wstx-asl', version: '3.2.1'
-    compile group: 'org.apache.ws.commons.schema', name: 'XmlSchema', version: '1.2'
+    compile group: 'org.apache.ws.commons.schema', name: 'XmlSchema', version: '1.4.2'
     compile group: 'xml-resolver', name: 'xml-resolver', version: '1.2'
     compile group: 'aopalliance', name: 'aopalliance', version: '1.0'
     compile group: 'org.springframework', name: 'spring-core', version: '4.3.8.RELEASE'
     compile group: 'org.springframework', name: 'spring-beans', version: '4.3.8.RELEASE'
     compile group: 'org.springframework', name: 'spring-context', version: '4.3.8.RELEASE'
     compile group: 'org.springframework', name: 'spring-web', version: '4.3.8.RELEASE'
+//    compile group: 'org.springframework', name: 'spring-aop', version: '4.3.8.RELEASE'
+    compile group: 'org.apache.cxf', name: 'cxf-rt-frontend-jaxws', version: '3.1.5'
+    compile group: 'org.apache.cxf', name: 'cxf-rt-transports-http', version: '3.1.5'
+    compile group: 'org.apache.cxf', name: 'cxf-rt-frontend-jaxrs', version: '3.1.5'
+    compile group: 'org.apache.cxf', name: 'cxf-rt-transports-http-jetty', version: '3.1.5'
+////    compile group: 'org.apache.cxf', name: 'cxf-rt-ws-policy', version: '2.7.6'
+//    compile group: 'javax.ws.rs', name: 'jsr311-api', version: '1.1.1'
+//    compile group: 'org.apache.cxf', name: 'apache-cxf', version: '2.7.6'
+
+
 
 
 
