--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ dependencies {
     compile group: 'javax.xml.soap', name: 'saaj-impl', version: '1.3'
     compile group: 'stax', name: 'stax-api', version: '1.0.1'
     compile group: 'wsdl4j', name: 'wsdl4j', version: '1.6.1'
-    compile group: 'org.codehaus.woodstox', name: 'wstx-asl', version: '3.2.1'
+    compile group: 'woodstox', name: 'wstx-asl', version: '3.2.1'
     compile group: 'org.apache.ws.commons.schema', name: 'XmlSchema', version: '1.4.2'
     compile group: 'xml-resolver', name: 'xml-resolver', version: '1.2'
     compile group: 'aopalliance', name: 'aopalliance', version: '1.0'
