--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ group 'com.snoopy.smp'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
+//IntelliJ IDEA 插件
+apply plugin: 'idea'
 apply plugin: 'war'
 
 sourceCompatibility = 1.8
