--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ dependencies {
     compile group: 'stax', name: 'stax-api', version: '1.0.1'
     compile group: 'wsdl4j', name: 'wsdl4j', version: '1.6.1'
     compile group: 'woodstox', name: 'wstx-asl', version: '3.2.1'
-    compile group: 'org.apache.ws.commons.schema', name: 'XmlSchema', version: '1.4.2'
+//    compile group: 'org.apache.ws.commons.schema', name: 'XmlSchema', version: '1.4.2'
     compile group: 'xml-resolver', name: 'xml-resolver', version: '1.2'
     compile group: 'aopalliance', name: 'aopalliance', version: '1.0'
     compile group: 'org.springframework', name: 'spring-core', version: '4.3.8.RELEASE'
